kubernetes/apps/homepage/app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Homepage
    gethomepage.dev/group: Platform
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/href: https://home.${cluster_domain}
    gethomepage.dev/podSelector: app.kubernetes.io/name=homepage
    gethomepage.dev/statusStyle: "dot"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home.${cluster_domain}`)
      kind: Rule
      middlewares:
        - name: authentik-forward-auth
      services:
        - name: homepage
          port: 3000
  tls: {}
